--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "Writer": "server=192.168.1.2;user id=root;password=test!1234;database=ContosoUniversity;sslmode=none;",
-    "Reader": "server=192.168.1.2;user id=root;password=test!1234;database=ContosoUniversity;sslmode=none;"
+    "Writer": "server=localhost;port=3366;user id=root;password=test!1234;database=ContosoUniversity;sslmode=none;",
+    "Reader": "server=localhost;port=3366;user id=root;password=test!1234;database=ContosoUniversity;sslmode=none;"
   },
   "Logging": {
     "IncludeScopes": false,
